imported first blogpost from blogspot

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://eshaiju.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: TechSleek
+subtitle: Its a place to write about I learned recently.
+author: Shaiju E
 simple_search: https://www.google.com/search
 description:
 
