--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ disqus_short_name: eshaijugithubio
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-50480030-1
 
 # Facebook Like
 facebook_like: true
