changed blog name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://eshaiju.github.io
-title: TechSleek
+title: Rails Kitchen
 subtitle: Its a place to write about I learned recently.
 author: Shaiju E
 simple_search: https://www.google.com/search
