--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://eshaiju.github.io
 title: Rails Kitchen
-subtitle: Its a place to write about I learned recently.
+subtitle: Its a place to write on stuff I learned recently.
 author: Shaiju E
 simple_search: https://www.google.com/search
 description:
