A GraphQL server implementation - Ruby On Rails

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://eshaiju.github.io
+url: http://tech.eshaiju.in
 title: Rails Kitchen
 subtitle: Its a place to write on stuff I learned recently.
 author: Shaiju E
